fixed google font, fixed font size on narrow screens (needs more work)

--- a/app/scss/_appstyles.scss
+++ b/app/scss/_appstyles.scss
@@ -5,7 +5,10 @@ body {
 	margin: 0;
 }
 
+
+
 .header {
+	position: relative;
 	width: 100%;
 	height: 13vh;
 	background-color: $cellcolor;
@@ -13,11 +16,20 @@ body {
 	border-bottom: 2vh solid $bgcolor2;
 	h1 {
 		color: $bgcolor2;
+		margin: 0 auto;
 		font-family: 'Source Code Pro';
 		font-weight: 700;
-		font-size: 13vh;
-		margin: 0 auto;
-		margin-top: 1.1vh;
+		// need to math this
+		font-size: 12.7vh;
+		margin-top: 1.4vh;
+		@media screen and (max-aspect-ratio: 2/3) { 
+			font-size: 19vw;
+			bottom: -6.4vw;
+			right: 0;
+			left: 0;
+			position: absolute;
+		}
+		
 		@include containerWidthOnly($cols, $rows, $container-width-prc, $container-height-prc);
 	}
 	@include container-shadow;
